# advent-of-code

./: .bazelignore  .bazelrc  .editorconfig  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  build.gradle  dev  new-day.sh  settings.gradle
libs/framework/core/: BUILD.bazel  build.gradle
libs/framework/core/src/main/java/net/anomalyxii/aoc/: Challenge.java  NoChallenge.java  OptimisedSolver.java  SolutionLoader.java  SolutionWrapper.java  Solutions.java  Solver.java  SpiSolutionLoader.java
libs/framework/core/src/main/java/net/anomalyxii/aoc/context/: FileBasedContext.java  ResourceBasedContext.java  SolutionContext.java  SolutionContextBuilder.java  StreamBasedContext.java
libs/framework/core/src/main/java/net/anomalyxii/aoc/result/: IntTuple.java  LongTuple.java  ObjectTuple.java  Tuple.java
libs/framework/utils-geometry/: BUILD.bazel
libs/framework/utils-maths/: BUILD.bazel
libs/runner/benchmarker/: BUILD.bazel
libs/runner/benchmarker/src/main/java/net/anomalyxii/aoc/: AdventOfCode.java  AnswerGenerator.java
libs/runner/cli/: BUILD.bazel  build.gradle
libs/runner/cli/src/main/java/net/anomalyxii/aoc/: AdventOfCode.java  Arguments.java
libs/runner/vertx/: BUILD.bazel  build.gradle
libs/runner/vertx/src/main/java/net/anomalyxii/aoc/: AdventOfCode.java
libs/runner/vertx/src/main/resources/: simplelogger.properties
libs/runner/vertx/src/main/resources/templates/: index.html
solutions/aoc2020/: BUILD.bazel
solutions/aoc2020/src/main/java/net/anomalyxii/aoc/aoc2020/: Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java
solutions/aoc2020/src/main/resources/2020/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
solutions/aoc2020/src/test/java/net/anomalyxii/aoc/aoc2020/: Day10Test.java  Day11Test.java  Day12Test.java  Day13Test.java  Day14Test.java  Day15Test.java  Day16Test.java  Day17Test.java  Day18Test.java  Day19Test.java  Day1Test.java  Day20Test.java  Day21Test.java  Day22Test.java  Day23Test.java  Day24Test.java  Day25Test.java  Day2Test.java  Day3Test.java  Day4Test.java  Day5Test.java  Day6Test.java  Day7Test.java  Day8Test.java  Day9Test.java
solutions/aoc2021/: BUILD.bazel
solutions/aoc2021/src/main/java/net/anomalyxii/aoc/aoc2021/: Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java
solutions/aoc2021/src/main/resources/2021/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
solutions/aoc2021/src/test/java/net/anomalyxii/aoc/aoc2021/: Day10Test.java  Day11Test.java  Day12Test.java  Day13Test.java  Day14Test.java  Day15Test.java  Day16Test.java  Day17Test.java  Day18Test.java  Day19Test.java  Day1Test.java  Day20Test.java  Day21Test.java  Day22Test.java  Day23Test.java  Day24Test.java  Day25Test.java  Day2Test.java  Day3Test.java  Day4Test.java  Day5Test.java  Day6Test.java  Day7Test.java  Day8Test.java  Day9Test.java
solutions/aoc2022/: BUILD.bazel  build.gradle
solutions/aoc2022/src/main/java/net/anomalyxii/aoc/aoc2022/: Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java
solutions/aoc2022/src/main/resources/2022/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
solutions/aoc2022/src/test/java/net/anomalyxii/aoc/aoc2022/: Day10Test.java  Day11Test.java  Day12Test.java  Day13Test.java  Day14Test.java  Day15Test.java  Day16Test.java  Day17Test.java  Day18Test.java  Day19Test.java  Day1Test.java  Day20Test.java  Day21Test.java  Day22Test.java  Day23Test.java  Day24Test.java  Day25Test.java  Day2Test.java  Day3Test.java  Day4Test.java  Day5Test.java  Day6Test.java  Day7Test.java  Day8Test.java  Day9Test.java
solutions/aoc2024/: BUILD.bazel
solutions/aoc2024/src/main/java/net/anomalyxii/aoc/aoc2024/: Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java
solutions/aoc2024/src/main/resources/2024/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
solutions/aoc2024/src/test/java/net/anomalyxii/aoc/aoc2024/: Day10Test.java  Day11Test.java  Day12Test.java  Day13Test.java  Day14Test.java  Day15Test.java  Day16Test.java  Day17Test.java  Day18Test.java  Day19Test.java  Day1Test.java  Day20Test.java  Day21Test.java  Day22Test.java  Day23Test.java  Day24Test.java  Day25Test.java  Day2Test.java  Day3Test.java  Day4Test.java  Day5Test.java  Day6Test.java  Day7Test.java  Day8Test.java  Day9Test.java
(+131 files in other folders)
