#
# Solutions: AoC 2022
#

load(
    "@//build:modules/modules.bzl",
    "artifact",
    "aoc_solutions",
    "aoc_test_suite",
)

aoc_solutions(
    name = "aoc2022",
    plugins = ["//libs/codegen/processor"],
    deps = [
        "//libs/codegen/annotations",
        "//libs/framework/core",
        "//libs/framework/utils-algo",
        "//libs/framework/utils-geometry",
        "//libs/framework/utils-maths",
    ],
)

aoc_test_suite(
    name = "aoc2022-tests",
    deps = [
        ":aoc2022",
        "//libs/codegen/annotations",
        "//libs/framework/core",
        "//libs/framework/utils-geometry",
        "//libs/framework/utils-maths",
        "//libs/framework/utils-ocr",
        artifact("org.assertj:assertj-core"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.junit.jupiter:junit-jupiter-params"),
    ],
    runtime_deps = [
        artifact("org.junit.jupiter:junit-jupiter-engine"),
        artifact("org.junit.platform:junit-platform-launcher"),
        artifact("org.junit.platform:junit-platform-reporting"),
    ],
)