#
# Framework: Utilities
#

load(
    "@//build:modules/modules.bzl",
    "artifact",
    "aoc_library",
    "aoc_test_suite"
)

aoc_library(
    name = "utils-maths",
    deps = [],
)

aoc_test_suite(
    name = "utils-maths-test",
    deps = [
        ":utils-maths",
        artifact("org.assertj:assertj-core"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.junit.jupiter:junit-jupiter-params"),
    ],
    runtime_deps = [
        artifact("org.junit.jupiter:junit-jupiter-engine"),
        artifact("org.junit.platform:junit-platform-launcher"),
        artifact("org.junit.platform:junit-platform-reporting"),
    ],
)